RESOLVED FIXED263322
[JSC][armv7] offlineasm/Macroassembler `break`/`breakpoint` hang under gdb
https://bugs.webkit.org/show_bug.cgi?id=263322
Summary [JSC][armv7] offlineasm/Macroassembler `break`/`breakpoint` hang under gdb
Joseph Griego
Reported 2023-10-18 09:30:30 PDT
As title; see also gdb bug: https://sourceware.org/bugzilla/show_bug.cgi?id=22645 To workaround, we can use `udf` instead.
Attachments
Joseph Griego
Comment 1 2023-10-18 09:33:05 PDT
EWS
Comment 2 2023-10-18 12:05:21 PDT
Committed 269481@main (4a0ec7daa9e9): <https://commits.webkit.org/269481@main> Reviewed commits have been landed. Closing PR #19232 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-10-18 12:06:16 PDT
Note You need to log in before you can comment on or make changes to this bug.