[JSC][armv7] Use udf for break/breakpoint in offlineasm/masm https://bugs.webkit.org/show_bug.cgi?id=263322

Reviewed by Yusuke Suzuki.

`bkpt` behaves very badly under gdb on armv7; it hangs [1] rather than traps.

To workaround, use `udf #0` instead; the encodings and semantics are very
similar.

[1] https://sourceware.org/bugzilla/show_bug.cgi?id=22645

* Source/JavaScriptCore/assembler/ARMv7Assembler.h:
(JSC::ARMv7Assembler::udf):
* Source/JavaScriptCore/assembler/MacroAssemblerARMv7.h:
(JSC::MacroAssemblerARMv7::breakpoint):
* Source/JavaScriptCore/offlineasm/arm.rb:

Canonical link: https://commits.webkit.org/269481@main